<resources>
    <string name="app_name">SQL</string>
    <string name="database">Database</string>
    <string name="begin">Begin</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter phone</string>
    <string name="save">Save</string>
    <string name="load_data">Load data</string>
    <string name="delete_data">Delete data</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="phone">Phone</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="exit">Exit</string>
</resources>