<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DBActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/database"
        android:background="?colorPrimary"
        app:titleTextColor="?colorOnPrimary" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <GridLayout
            android:columnCount="3"
            android:rowCount="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:layout_marginTop="@dimen/margin_top"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnSpan="3"/>
            <EditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:layout_marginTop="@dimen/margin_top"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_columnSpan="3"/>
            <Spinner
                android:id="@+id/roleS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnSpan="3"/>
            <Button
                android:id="@+id/saveBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:layout_column="0"
                android:layout_row="3"/>
            <Button
                android:id="@+id/loadBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/load_data"
                android:layout_column="1"
                android:layout_row="3"/>
            <Button
                android:id="@+id/deleteBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/delete_data"
                android:layout_column="2"
                android:layout_row="3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_horizontal"
                android:layout_column="0"
                android:layout_row="4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:layout_gravity="center_horizontal"
                android:layout_column="1"
                android:layout_row="4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_gravity="center_horizontal"
                android:layout_column="2"
                android:layout_row="4" />
            <TextView
                android:id="@+id/namesTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:gravity="center_horizontal"
                android:text=""
                android:layout_column="0"
                android:layout_row="5" />
            <TextView
                android:id="@+id/rolesTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center_horizontal"
                android:layout_gravity="fill_horizontal"
                android:text=""
                android:layout_column="1"
                android:layout_row="5" />
            <TextView
                android:id="@+id/phonesTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center_horizontal"
                android:layout_gravity="fill_horizontal"
                android:text=""
                android:layout_column="2"
                android:layout_row="5" />
        </GridLayout>
    </ScrollView>


</LinearLayout>